commit validate form

--- a/smoth-background/index.html
+++ b/smoth-background/index.html
@@ -12,6 +12,7 @@
     <a href="#" class="menu-item">项目进度</a>
     <a href="#" class="menu-item">分析</a>
     <a href="#" class="menu-item">设置</a>
+    <a href="#" class="menu-item">滑动背景效果对于长 Item 的适应</a>
 </div>
 <script src="main.js"></script>
 </body>
