interview practice day 1

--- a/challenges/canvas-practice/05_canvas_path.html
+++ b/challenges/canvas-practice/05_canvas_path.html
@@ -26,8 +26,9 @@
   ctx.lineTo(380, 50)
   // 封闭路径
   ctx.closePath()
-  // 绘制不规则图形
+  // 绘制边框
   ctx.strokeStyle = 'red'
+  // 绘制不规则图形
   ctx.stroke()
 </script>
 </body>
