interview practice day 3

--- a/playground/index.html
+++ b/playground/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
 <div class="box"></div>
-<script src="functions.js"></script>
+<script src="functional.js"></script>
 </body>
 </html>
